[package]
name = "nom-bibtex"
version = "0.5.0"
authors = ["Charles Vandevoorde <charles.vandevoorde@hotmail.be>"]

description = "BibTeX parser using nom"
categories = ["parsing"]
keywords = ["bibtex", "latex", "parser", "nom"]

repository = "https://github.com/charlesvdv/nom-bibtex"
documentation = "https://docs.rs/nom-bibtex"

edition = "2024"

license = "MIT"

[lib]
name = "nom_bibtex"

[dependencies]
nom = "8.0"
quick-error = "2.0"
nom-tracable = "0.9"
nom_locate = "5.0"
nom-language = "0.1"

[features]
default = []
trace = ["nom-tracable/trace"]
